# FilmFlood

./: .dockerignore  README.md
backend/movie/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml
backend/movie/migrations/: env.py
backend/movie/migrations/versions/: 68c22525f815_.py  c372f0770a9e_.py
backend/movie/src/controller/: route.py
backend/movie/src/controller/actor/: route.py
backend/movie/src/controller/film/: route.py
backend/movie/src/controller/schema/: schemas.py
backend/movie/src/controller/serial/: route.py
backend/movie/src/core/: config.py  schemas.py
backend/movie/src/core/database/: models.py
backend/movie/src/core/redis/: base.py
backend/movie/src/repositories/actor/: actors.py  base.py
backend/movie/src/repositories/film/: base.py  films.py
backend/movie/src/repositories/s3/: base.py  s3.py
backend/movie/src/repositories/serial/: base.py  serials.py
backend/movie/src/service/: actors.py  films.py  serials.py
backend/movie/src/utils/: converter.py
backend/notification/: .env.example  Dockerfile  main.py  pyproject.toml
backend/notification/src/controller/: auth.py  payment.py
backend/notification/src/core/: config.py
backend/notification/src/core/email/: base.py
backend/notification/src/service/: auth.py  payment.py
backend/notification/templates/: auth-success.html  payment-receipt.html
backend/payment/: .env.example  Dockerfile  Makefile  main.py  pyproject.toml
backend/payment/migrations/: env.py
backend/payment/migrations/versions/: 00932a5e2b40_.py
backend/payment/src/controller/: payment.py
backend/payment/src/core/: config.py  schemas.py
backend/payment/src/core/database/: base.py  models.py
backend/payment/src/service/: payment.py
backend/payment/src/utils/: html_to_pdf.py
backend/payment/templates/: payment-receipt.html
backend/users/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml
backend/users/migration/: env.py
backend/users/migration/versions/: 2ad806b80484_.py
backend/users/src/controller/: auth.py  users.py
backend/users/src/core/: config.py  schemas.py
backend/users/src/service/: auth.py  tokens.py  users.py
(+104 files in other folders)
