[project]
name = "notification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12s"
dependencies = [
    "aiokafka>=0.12.0",
    "fastapi>=0.115.11",
    "fastapi-mail>=1.4.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]
