[project]
name = "payment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.21.1",
    "aiokafka>=0.12.0",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pdfkit>=1.0.0",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
    "yookassa>=3.5.0",
]
